// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExternalLinks > opens the menu when the button is clicked 1`] = `
<div>
  <button
    aria-controls="sy-external-links-menu-v-0"
    aria-expanded="true"
    aria-haspopup="menu"
    aria-label="Menu : Consulter les données externes"
    class="
      d-flex
      px-3
      rounded-0
      sy-external-links-btn
      v-btn
      v-btn--density-default
      v-btn--elevated
      v-btn--size-default
      v-btn--variant-elevated
      v-theme--light
    "
    style="
      background-color: #0c419a;
      color: #fff;
      caret-color: #fff;
      min-height: 48px;
      min-width: 328px;
      transform: translateX(0);
      position: absolute;
      flex-direction: row;
      top: 0px;
      bottom: auto;
      left: 0px;
      right: auto;
      z-index: 4;
    "
    type="button"
  >
    <span class="v-btn__overlay"></span>
    <span class="v-btn__underlay"></span>
    <!---->
    <span
      class="v-btn__content"
      data-no-activator=""
    >
      <span class="
        mr-3
        sy-external-links-btn-text
        white--text
      ">
        Consulter les données externes
      </span>
      <i
        aria-hidden="true"
        class="
          M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z
          mdi
          notranslate
          text-white
          v-icon
          v-icon--size-default
          v-theme--light
        "
      ></i>
    </span>
    <!---->
    <!---->
  </button>
  <!-- teleport start -->
  <div
    class="
      sy-external-links
      sy-external-links--left
      v-locale--is-ltr
      v-menu
      v-overlay
      v-overlay--absolute
      v-overlay--active
      v-theme--light
    "
    id="sy-external-links-menu-v-0"
    style="z-index: 4;"
  >
    <transition-stub
      appear="true"
      css="true"
      name="fade-transition"
      persisted="false"
    >
      <!---->
    </transition-stub>
    <transition-stub
      appear="true"
      css="true"
      name="fade-transition"
      persisted="true"
      target="<button data-v-353763df="" type="button" class="v-btn v-btn--elevated v-theme--light v-btn--density-default rounded-0 v-btn--size-default v-btn--variant-elevated d-flex px-3 sy-external-links-btn" style="background-color: #0c419a; color: #fff; caret-color: #fff; min-height: 48px; min-width: 328px; transform: translateX(0); position: absolute; flex-direction: row; top: 0px; bottom: auto; left: 0px; right: auto; z-index: 4;" aria-haspopup="menu" aria-expanded="true" aria-label="Menu : Consulter les données externes" aria-controls="sy-external-links-menu-v-0"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span><!----><span class="v-btn__content" data-no-activator=""><span data-v-353763df="" class="mr-3 sy-external-links-btn-text white--text">Consulter les données externes</span><i data-v-353763df="" class="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z mdi v-icon notranslate v-theme--light v-icon--size-default text-white" aria-hidden="true"></i></span><!----><!----></button>"
    >
      <div
        class="v-overlay__content"
        style="
          --v-overlay-anchor-origin: top right;
          transform-origin: bottom right;
          top: 12px;
          left: 12px;
          min-width: 0px;
          max-width: 0px;
          max-height: 0px;
        "
      >
        <ul
          class="
            elevation-3
            py-0
            sy-external-links-list
          "
          role="toolbar"
          tabindex="0"
        >
          <li>
            <a
              class="
                py-2
                rounded-0
                sy-external-links-list-item
                v-btn
                v-btn--block
                v-btn--density-default
                v-btn--flat
                v-btn--size-large
                v-btn--variant-elevated
                v-theme--light
              "
              href="https://www.ameli.fr"
              rel="noopener noreferrer"
              tabindex="-1"
              target="_blank"
            ><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
              
            <!----><span
              class="v-btn__content"
              data-no-activator=""
            ><div class="
              align-center
              d-flex
              h-100
              justify-space-between
              w-100
            "><div>ameli.fr</div><i
              aria-hidden="true"
              class="
                0
                0
                0,0
                0,0
                21,19V12H19V19Z
                3,3.9
                3,5V19A2,2
                5,21H19A2,2
                M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3
                mdi
                notranslate
                v-icon
                v-icon--size-large
                v-theme--light
              "
              style="
                color: rgba(0, 0, 0, .54);
                caret-color: rgba(0, 0, 0, .54);
              "
            ></i></div></span>
              
            <!---->
              
            <!---->
            </a>
          </li>
          <li>
            <a
              class="
                py-2
                rounded-0
                sy-external-links-list-item
                v-btn
                v-btn--block
                v-btn--density-default
                v-btn--flat
                v-btn--size-large
                v-btn--variant-elevated
                v-theme--light
              "
              href="https://www.github.com"
              rel="noopener noreferrer"
              tabindex="-1"
              target="_blank"
            ><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
              
            <!----><span
              class="v-btn__content"
              data-no-activator=""
            ><div class="
              align-center
              d-flex
              h-100
              justify-space-between
              w-100
            "><div>Github</div><i
              aria-hidden="true"
              class="
                0
                0
                0,0
                0,0
                21,19V12H19V19Z
                3,3.9
                3,5V19A2,2
                5,21H19A2,2
                M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3
                mdi
                notranslate
                v-icon
                v-icon--size-large
                v-theme--light
              "
              style="
                color: rgba(0, 0, 0, .54);
                caret-color: rgba(0, 0, 0, .54);
              "
            ></i></div></span>
              
            <!---->
              
            <!---->
            </a>
          </li>
          <li>
            <a
              class="
                py-2
                rounded-0
                sy-external-links-list-item
                v-btn
                v-btn--block
                v-btn--density-default
                v-btn--flat
                v-btn--size-large
                v-btn--variant-elevated
                v-theme--light
              "
              href="https://www.twitter.com"
              rel="noopener noreferrer"
              tabindex="-1"
              target="_blank"
            ><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
              
            <!----><span
              class="v-btn__content"
              data-no-activator=""
            ><div class="
              align-center
              d-flex
              h-100
              justify-space-between
              w-100
            "><div>Twitter</div><i
              aria-hidden="true"
              class="
                0
                0
                0,0
                0,0
                21,19V12H19V19Z
                3,3.9
                3,5V19A2,2
                5,21H19A2,2
                M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3
                mdi
                notranslate
                v-icon
                v-icon--size-large
                v-theme--light
              "
              style="
                color: rgba(0, 0, 0, .54);
                caret-color: rgba(0, 0, 0, .54);
              "
            ></i></div></span>
              
            <!---->
              
            <!---->
            </a>
          </li>
        </ul>
      </div>
    </transition-stub>
  </div>
  <!-- teleport end -->
</div>
`;

exports[`ExternalLinks > renders correctly 1`] = `
<div>
  <v-menu-stub
    activatorprops="[object Object]"
    attach="true"
    class="
      sy-external-links
      sy-external-links--left
    "
    closedelay="250"
    closeonback="true"
    closeoncontentclick="true"
    contained="false"
    disabled="false"
    eager="false"
    id="sy-external-links-menu-v-0"
    location="bottom"
    locationstrategy="connected"
    modelvalue="false"
    noclickanimation="false"
    offset="0"
    opendelay="300"
    openonhover="false"
    origin="auto"
    persistent="false"
    scrim="false"
    scrollstrategy="reposition"
    submenu="false"
    transition="fade-transition"
    zindex="4"
  ></v-menu-stub>
</div>
`;

exports[`ExternalLinks > renders correctly with fixed prop 1`] = `
<div>
  <button
    aria-controls="sy-external-links-menu-v-0"
    aria-expanded="true"
    aria-haspopup="menu"
    aria-label="Menu : Consulter les données externes"
    class="
      d-flex
      px-3
      rounded-0
      sy-external-links-btn
      v-btn
      v-btn--density-default
      v-btn--elevated
      v-btn--size-default
      v-btn--variant-elevated
      v-theme--light
    "
    style="
      background-color: #0c419a;
      color: #fff;
      caret-color: #fff;
      min-height: 48px;
      min-width: 328px;
      transform: translateX(0);
      position: fixed;
      flex-direction: row-reverse;
      top: auto;
      bottom: 0px;
      left: auto;
      right: 0px;
      z-index: 5;
    "
    type="button"
  >
    <span class="v-btn__overlay"></span>
    <span class="v-btn__underlay"></span>
    <!---->
    <span
      class="v-btn__content"
      data-no-activator=""
    >
      <span class="
        ml-3
        sy-external-links-btn-text
        white--text
      ">
        Consulter les données externes
      </span>
      <i
        aria-hidden="true"
        class="
          M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z
          mdi
          notranslate
          text-white
          v-icon
          v-icon--size-default
          v-theme--light
        "
      ></i>
    </span>
    <!---->
    <!---->
  </button>
  <!-- teleport start -->
  <div
    class="
      sy-external-links
      sy-external-links--right
      v-locale--is-ltr
      v-menu
      v-overlay
      v-overlay--absolute
      v-overlay--active
      v-theme--light
    "
    id="sy-external-links-menu-v-0"
    style="z-index: 24;"
  >
    <transition-stub
      appear="true"
      css="true"
      name="fade-transition"
      persisted="false"
    >
      <!---->
    </transition-stub>
    <transition-stub
      appear="true"
      css="true"
      name="fade-transition"
      persisted="true"
      target="<button data-v-353763df="" type="button" class="v-btn v-btn--elevated v-theme--light v-btn--density-default rounded-0 v-btn--size-default v-btn--variant-elevated d-flex px-3 sy-external-links-btn" style="background-color: #0c419a; color: #fff; caret-color: #fff; min-height: 48px; min-width: 328px; transform: translateX(0); position: fixed; flex-direction: row-reverse; top: auto; bottom: 0px; left: auto; right: 0px; z-index: 5;" aria-haspopup="menu" aria-expanded="true" aria-label="Menu : Consulter les données externes" aria-controls="sy-external-links-menu-v-0"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span><!----><span class="v-btn__content" data-no-activator=""><span data-v-353763df="" class="ml-3 sy-external-links-btn-text white--text">Consulter les données externes</span><i data-v-353763df="" class="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z mdi v-icon notranslate v-theme--light v-icon--size-default text-white" aria-hidden="true"></i></span><!----><!----></button>"
    >
      <div
        class="v-overlay__content"
        style="
          --v-overlay-anchor-origin: bottom right;
          transform-origin: top right;
          top: 12px;
          left: 12px;
          min-width: 0px;
          max-width: 0px;
          max-height: 0px;
        "
      >
        <ul
          class="
            elevation-3
            py-0
            sy-external-links-list
          "
          role="toolbar"
          tabindex="0"
        >
          <li>
            <a
              class="
                py-2
                rounded-0
                sy-external-links-list-item
                v-btn
                v-btn--block
                v-btn--density-default
                v-btn--flat
                v-btn--size-large
                v-btn--variant-elevated
                v-theme--light
              "
              href="https://www.ameli.fr"
              rel="noopener noreferrer"
              tabindex="-1"
              target="_blank"
            ><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
              
            <!----><span
              class="v-btn__content"
              data-no-activator=""
            ><div class="
              align-center
              d-flex
              h-100
              justify-space-between
              w-100
            "><div>ameli.fr</div><i
              aria-hidden="true"
              class="
                0
                0
                0,0
                0,0
                21,19V12H19V19Z
                3,3.9
                3,5V19A2,2
                5,21H19A2,2
                M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3
                mdi
                notranslate
                v-icon
                v-icon--size-large
                v-theme--light
              "
              style="
                color: rgba(0, 0, 0, .54);
                caret-color: rgba(0, 0, 0, .54);
              "
            ></i></div></span>
              
            <!---->
              
            <!---->
            </a>
          </li>
          <li>
            <a
              class="
                py-2
                rounded-0
                sy-external-links-list-item
                v-btn
                v-btn--block
                v-btn--density-default
                v-btn--flat
                v-btn--size-large
                v-btn--variant-elevated
                v-theme--light
              "
              href="https://www.github.com"
              rel="noopener noreferrer"
              tabindex="-1"
              target="_blank"
            ><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
              
            <!----><span
              class="v-btn__content"
              data-no-activator=""
            ><div class="
              align-center
              d-flex
              h-100
              justify-space-between
              w-100
            "><div>Github</div><i
              aria-hidden="true"
              class="
                0
                0
                0,0
                0,0
                21,19V12H19V19Z
                3,3.9
                3,5V19A2,2
                5,21H19A2,2
                M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3
                mdi
                notranslate
                v-icon
                v-icon--size-large
                v-theme--light
              "
              style="
                color: rgba(0, 0, 0, .54);
                caret-color: rgba(0, 0, 0, .54);
              "
            ></i></div></span>
              
            <!---->
              
            <!---->
            </a>
          </li>
          <li>
            <a
              class="
                py-2
                rounded-0
                sy-external-links-list-item
                v-btn
                v-btn--block
                v-btn--density-default
                v-btn--flat
                v-btn--size-large
                v-btn--variant-elevated
                v-theme--light
              "
              href="https://www.twitter.com"
              rel="noopener noreferrer"
              tabindex="-1"
              target="_blank"
            ><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
              
            <!----><span
              class="v-btn__content"
              data-no-activator=""
            ><div class="
              align-center
              d-flex
              h-100
              justify-space-between
              w-100
            "><div>Twitter</div><i
              aria-hidden="true"
              class="
                0
                0
                0,0
                0,0
                21,19V12H19V19Z
                3,3.9
                3,5V19A2,2
                5,21H19A2,2
                M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3
                mdi
                notranslate
                v-icon
                v-icon--size-large
                v-theme--light
              "
              style="
                color: rgba(0, 0, 0, .54);
                caret-color: rgba(0, 0, 0, .54);
              "
            ></i></div></span>
              
            <!---->
              
            <!---->
            </a>
          </li>
        </ul>
      </div>
    </transition-stub>
  </div>
  <!-- teleport end -->
</div>
`;

exports[`ExternalLinks > slides on hover or focus 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="Menu : Consulter les données externes"
    class="
      d-flex
      px-3
      rounded-0
      sy-external-links-btn
      v-btn
      v-btn--density-default
      v-btn--elevated
      v-btn--size-default
      v-btn--variant-elevated
      v-theme--light
    "
    style="
      background-color: #0c419a;
      color: #fff;
      caret-color: #fff;
      min-height: 48px;
      min-width: 328px;
      transform: translateX(calc(100% - 48px));
      position: absolute;
      flex-direction: row-reverse;
      top: auto;
      bottom: 0px;
      left: auto;
      right: 0px;
      z-index: 5;
    "
    type="button"
  >
    <span class="v-btn__overlay"></span>
    <span class="v-btn__underlay"></span>
    <!---->
    <span
      class="v-btn__content"
      data-no-activator=""
    >
      <span class="
        ml-3
        sy-external-links-btn-text
        white--text
      ">
        Consulter les données externes
      </span>
      <i
        aria-hidden="true"
        class="
          M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z
          mdi
          notranslate
          text-white
          v-icon
          v-icon--size-default
          v-theme--light
        "
      ></i>
    </span>
    <!---->
    <!---->
  </button>
  <!---->
</div>
`;

exports[`ExternalLinks > slides on hover or focus 2`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="Menu : Consulter les données externes"
    class="
      d-flex
      px-3
      rounded-0
      sy-external-links-btn
      v-btn
      v-btn--density-default
      v-btn--elevated
      v-btn--size-default
      v-btn--variant-elevated
      v-theme--light
    "
    style="
      background-color: #0c419a;
      color: #fff;
      caret-color: #fff;
      min-height: 48px;
      min-width: 328px;
      transform: translateX(0);
      position: absolute;
      flex-direction: row-reverse;
      top: auto;
      bottom: 0px;
      left: auto;
      right: 0px;
      z-index: 5;
    "
    type="button"
  >
    <span class="v-btn__overlay"></span>
    <span class="v-btn__underlay"></span>
    <!---->
    <span
      class="v-btn__content"
      data-no-activator=""
    >
      <span class="
        ml-3
        sy-external-links-btn-text
        white--text
      ">
        Consulter les données externes
      </span>
      <i
        aria-hidden="true"
        class="
          M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z
          mdi
          notranslate
          text-white
          v-icon
          v-icon--size-default
          v-theme--light
        "
      ></i>
    </span>
    <!---->
    <!---->
  </button>
  <!---->
</div>
`;

exports[`ExternalLinks > slides on hover or focus 3`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="Menu : Consulter les données externes"
    class="
      d-flex
      px-3
      rounded-0
      sy-external-links-btn
      v-btn
      v-btn--density-default
      v-btn--elevated
      v-btn--size-default
      v-btn--variant-elevated
      v-theme--light
    "
    style="
      background-color: #0c419a;
      color: #fff;
      caret-color: #fff;
      min-height: 48px;
      min-width: 328px;
      transform: translateX(calc(100% - 48px));
      position: absolute;
      flex-direction: row-reverse;
      top: auto;
      bottom: 0px;
      left: auto;
      right: 0px;
      z-index: 5;
    "
    type="button"
  >
    <span class="v-btn__overlay"></span>
    <span class="v-btn__underlay"></span>
    <!---->
    <span
      class="v-btn__content"
      data-no-activator=""
    >
      <span class="
        ml-3
        sy-external-links-btn-text
        white--text
      ">
        Consulter les données externes
      </span>
      <i
        aria-hidden="true"
        class="
          M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z
          mdi
          notranslate
          text-white
          v-icon
          v-icon--size-default
          v-theme--light
        "
      ></i>
    </span>
    <!---->
    <!---->
  </button>
  <!---->
</div>
`;

exports[`ExternalLinks > slides on hover or focus 4`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="Menu : Consulter les données externes"
    class="
      d-flex
      px-3
      rounded-0
      sy-external-links-btn
      v-btn
      v-btn--density-default
      v-btn--elevated
      v-btn--size-default
      v-btn--variant-elevated
      v-theme--light
    "
    style="
      background-color: #0c419a;
      color: #fff;
      caret-color: #fff;
      min-height: 48px;
      min-width: 328px;
      transform: translateX(0);
      position: absolute;
      flex-direction: row-reverse;
      top: auto;
      bottom: 0px;
      left: auto;
      right: 0px;
      z-index: 5;
    "
    type="button"
  >
    <span class="v-btn__overlay"></span>
    <span class="v-btn__underlay"></span>
    <!---->
    <span
      class="v-btn__content"
      data-no-activator=""
    >
      <span class="
        ml-3
        sy-external-links-btn-text
        white--text
      ">
        Consulter les données externes
      </span>
      <i
        aria-hidden="true"
        class="
          M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z
          mdi
          notranslate
          text-white
          v-icon
          v-icon--size-default
          v-theme--light
        "
      ></i>
    </span>
    <!---->
    <!---->
  </button>
  <!---->
</div>
`;

exports[`ExternalLinks > slides on hover or focus 5`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="Menu : Consulter les données externes"
    class="
      d-flex
      px-3
      rounded-0
      sy-external-links-btn
      v-btn
      v-btn--density-default
      v-btn--elevated
      v-btn--size-default
      v-btn--variant-elevated
      v-theme--light
    "
    style="
      background-color: #0c419a;
      color: #fff;
      caret-color: #fff;
      min-height: 48px;
      min-width: 328px;
      transform: translateX(calc(100% - 48px));
      position: absolute;
      flex-direction: row-reverse;
      top: auto;
      bottom: 0px;
      left: auto;
      right: 0px;
      z-index: 5;
    "
    type="button"
  >
    <span class="v-btn__overlay"></span>
    <span class="v-btn__underlay"></span>
    <!---->
    <span
      class="v-btn__content"
      data-no-activator=""
    >
      <span class="
        ml-3
        sy-external-links-btn-text
        white--text
      ">
        Consulter les données externes
      </span>
      <i
        aria-hidden="true"
        class="
          M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z
          mdi
          notranslate
          text-white
          v-icon
          v-icon--size-default
          v-theme--light
        "
      ></i>
    </span>
    <!---->
    <!---->
  </button>
  <!---->
</div>
`;
